--- a/HTML/exo3/index.html
+++ b/HTML/exo3/index.html
@@ -45,5 +45,6 @@ Le degré d'alcool élevé de cette eau de vie, dite aussi « gnôle », permett
 <h2>Digestif</h2>
 
 <p>Un digestif est une boisson, alcoolisée ou non, qui se prend habituellement à la fin d'un repas, et qui est censée faciliter la digestion. Au Moyen Âge, quand l'alcool était encore réservé à un usage médical, on buvait en fin de repas une boisson à base de vin, de sucre et d'épices : l'hypocras. À l'époque, les épices étaient supposées faciliter la digestion et le sucre était considéré comme un médicament. On parle aussi familièrement de pousse-café lorsqu'il accompagne ce dernier, et encore plus familièrement de rincette ou rince-cochon. Les principaux digestifs sont des liqueurs ou des eaux-de-vie, mais aussi des tisanes ou infusions. Le thé et le café peuvent aussi être considérés comme des digestifs.</p>
+<p>bonjour</p>
 </body>
 </html>
